45
================

27/12/21 Person should not be mandatory to create an incident from online form
26/12/21 Do not include emblems when sorting by animal name in find results
26/12/21 HasActiveReserve should observe ReservationCancelledDate
23/12/21 Additional colour options for medium theme
22/12/21 Search all media for matching notes in find animal
19/12/21 SavourLife/PetRescue option to send microchips for all listings
15/12/21 Add a medium/mid-tone theme #1076
15/12/21 Fix bug generating clinic documents with no person
14/12/21 Document template types, fixed template rename display bug #364
13/12/21 Show attachments when emailing media, use name/notes #1074
13/12/21 Hidden config for future limit on date brought in #1075
09/12/21 Clickable icon in table header to show filter line #1073
09/12/21 OOO token for animal codes (animals in month) #1071
07/12/21 Fix regression with last movement duplicating staff rota people
06/12/21 Fix regression with JQuery 1.13 and rearranging lists
06/12/21 Last movement on person using latest ID instead of date
06/12/21 Animal age not updating on all animal tabs
05/12/21 Make dark mode easier to read, use qs to force theme reload
04/12/21 Add OR support to online form showif
03/12/21 Update to JQueryUI 1.13.0
02/12/21 Regenerate light theme with flat textures
01/12/21 Dump ancient/ugly JQUI themes, map them to ASM light/dark
01/12/21 Rewrite mobile signing pad into bootstrap #1068
01/12/21 PetRescue/SavourLife - use retailer postcode if available
01/12/21 Dark mode for SQL/HTML editing, better shadows
30/11/21 Update Czech translation (Jiří Podhorecký)
30/11/21 Fix changelog display in dark mode
29/11/21 Add facility to convert images into PDFs on the media tab #1046
29/11/21 Move media image menu items into a menu button to save space #1046
29/11/21 Add $ASK LOOKUP and $ASK PAYMENTMETHOD #525
28/11/21 Add euthanized non-shelter animals section to annual figures
27/11/21 Add ASM dark mode theme