@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Mon 27 Dec 10:41:17 GMT 2021]"
-BUILD = "12271041"
+VERSION = "45u [Tue 28 Dec 12:28:53 GMT 2021]"
+BUILD = "12281228"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
